--- a/web/template/project.html
+++ b/web/template/project.html
@@ -1,16 +1,22 @@
-<div class="project">
-    <div class="proj-wrapper">
-        <img class="icon" src="projects/{{NAME}}.png">
-        <div class="desc">
-            <div id="title-bar">
-                <i>
-                    <span style="color:var(--text-blue)">#desc</span><span style="color:var(--text-green)"> - </span><span
-                        style="color:var(--text-yellow)">web</span><span style="color:var(--text-green)">/</span><span
-                        style="color:var(--text-yellow)">static</span><span style="color:var(--text-green)">/</span><span
-                        style="color:var(--text-yellow)">projects</span><span style="color:var(--text-green)">/</span><span
-                        style="color:var(--text-yellow)">{{NAME}}</span><span style="color:var(--text-red)">.md</span>
+<div id="frame" class="blue"></div>
+<div class="flex">
+    <div id="title-bar">
+        <img id="window-button" src="assets/window.svg" />
+        <i><span style="color:var(--text-blue)">Viewing</span>
+            <span style="color:var(--text-green)"> - </span>
+            <span style="color:var(--text-yellow)">web</span>
+            <span style="color:var(--text-green)">/</span>
+            <span style="color:var(--text-yellow)">template</span>
+            <span style="color:var(--text-green)">/</span>
+            <span style="color:var(--text-yellow)">home</span>
+            <span style="color:var(--text-red)">.html</span>
+        </i>
+    </div>
+    <div class="project">
+        <div class="proj-wrapper">
+            <img class="icon" src="projects/{{NAME}}.png">
+            <div class="desc">
                 </i>
-                {{CONTENT}}
             </div>
         </div>
     </div>
