--- a/web/template/blog.html
+++ b/web/template/blog.html
@@ -1,5 +1,5 @@
-<div id="content">
-    <div id="frame" class="green"></div>
+<div class="content" id="blog">
+    <div id="frame"></div>
     <div class="flex">
         <div id="title-bar">
             <img id="window-button" src="assets/window.svg" />
