--- a/web/scss/project.scss
+++ b/web/scss/project.scss
@@ -1,80 +1,53 @@
 @import "variables";
 
 .project {
-    $item-size: calc(25vw * $pane-width);
+    $item-size: calc($content-width * 0.25);
     $desc-size: 2.8;
     
-    .flex {
-        justify-content: center;
+    // .flex {
+    //     justify-content: left;
+    //     display: flex;
+        
+    //     #h {
+    //         font-size: calc($text-size * 1);
+    //         margin-top: 0;
+    //         margin-left: 5px;
+    //         width: 100%;
+    //         position: relative;
+    //         // background-color: var(--gb-f-blue);
+    //     }
+    // }
+    
+    .project {
         display: flex;
-        flex-direction: column;
-
-        #h {
-            font-size: calc($text-size * 1);
-            margin-top: 0;
-            margin-left: 5px;
-            width: 100%;
-            position: relative;
-            // background-color: var(--gb-f-blue);
-        }
+        flex-direction: row;
     }
     
     .desc,
     .icon {
-        margin-top: 10px;
         position: relative;
         display: inline-block;
-        box-shadow: 10px 10px 10px #0000002c;
+        // box-shadow: 10px 10px 10px #0000002c;
         // left: 0;
         // width: $item-size;
         height: $item-size;
-        transition: transform 1.5s, filter 0.4s;
+        // transition: transform 1.5s, filter 0.4s;
     }
-
+    
     .desc {
+        padding-left: 15px;
+        margin-top: 5px;
         text-align: left;
-        width: calc($item-size * $desc-size);
-        margin-left: 8px;
-        
-        .markdown-body {
-            height: calc($item-size - 30px - 32px);
-            border-bottom-left-radius: 10px;
-            border-bottom-right-radius: 10px;
-        }
+        border-radius: $border-size;
+        width: calc(100% - $border-size * 2 - $item-size - 20px);
+        // flex: 1;
+        height: $item-size;
+        overflow: scroll;
     }
     
     .icon {
-        // margin-right: 0px;
+        margin-left: 5px;
         border-radius: 10px;
         width: $item-size;
-    }
-    
-    .proj-wrapper {
-        width: 100%;
-        margin-left: 5px;
-        margin-right: 5px;
-    }
-    
-    .proj-wrapper {
-        .desc {
-            visibility: hidden;
-            border: none;
-            transform: scaleX(0);
-        }
-        
-        .icon {
-            transform: translateX(calc(100% * $desc-size / 2));
-        }
-    }
-
-    .active {
-        .desc {
-            visibility: visible;
-            transform: scaleX(1);
-        }
-        
-        .icon {
-            transform: translateX(0%);
-        }
     }
 }
