--- a/web/static/styles/styles.css
+++ b/web/static/styles/styles.css
@@ -1,11 +1,52 @@
 /* GRUVBOX but slightly modified */
-@import "text.css";
 :root {
   --color-frame-blue: hsl(192, 32%, 75%);
   --color-inner-blue: hsl(193, 56%, 84%);
   --color-bg: hsl(0, 0%, 100%);
-  --color-grid-1: rgba(255, 255, 255, 0.2);
-  --color-grid-2: rgba(255, 255, 255, 0.3);
+  --color-grid-1: rgba(0, 0, 0, 0.02);
+  --color-grid-2: rgba(0, 0, 0, 0.04);
+}
+
+.desc {
+  /* padding: 16px 32px 16px 32px; */
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  margin: 0;
+  font-family: "Noto Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  font-size: 16px;
+  line-height: 1.5;
+  word-wrap: break-word;
+}
+
+/* Turn on custom 8px wide scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+  /* 1px wider than Lion. */
+  /* This is more usable for users trying to click it. */
+  background-color: rgba(0, 0, 0, 0);
+  -webkit-border-radius: 100px;
+}
+::-webkit-scrollbar :hover {
+  background-color: rgba(0, 0, 0, 0.09);
+}
+
+/* The scrollbar 'thumb' ...that marque oval shape in a scrollbar */
+::-webkit-scrollbar-thumb:vertical {
+  /* This is the EXACT color of Mac OS scrollbars. 
+   Yes, I pulled out digital color meter */
+  background: rgba(0, 0, 0, 0.5);
+  -webkit-border-radius: 100px;
+}
+::-webkit-scrollbar-thumb:vertical :active {
+  background: rgba(0, 0, 0, 0.61);
+  /* Some darker color when you click it */
+  -webkit-border-radius: 100px;
+}
+
+.desc {
+  overflow-y: scroll;
+  scrollbar-color: rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0.09);
+  scrollbar-width: thin;
 }
 
 @font-face {
@@ -30,47 +71,206 @@ body {
   background-size: 50px 50px;
 }
 
-#content {
+.content {
   overflow: visible;
   left: 0px;
   position: relative;
-  left: 7.5vw;
-  width: 85vw;
+  left: calc(50vw - min(85vw, 1000px) / 2);
+  width: min(85vw, 1000px);
   text-align: center;
 }
-#content #frame {
+.content #frame {
   border-radius: 10px;
+  border: 5px solid;
   position: absolute;
   left: 0;
   width: 100%;
-  height: 100%;
-  height: 100%;
+  height: calc(100% - 5px);
 }
-#content #frame.blue {
-  border: 5px solid var(--color-frame-blue);
-  background-color: var(--color-inner-blue);
-}
-#content #frame.green {
-  border: 5px solid var(--color-frame-green);
-  background-color: var(--color-inner-green);
-}
-#content #title-bar {
+.content #title-bar {
   height: 20px;
   width: 100%;
   position: relative;
-  border: 5px solid var(--gb-bg0-h);
-  background-color: var(--gb-bg0);
+  border: 5px solid;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   text-align: center;
   font-family: "FixedSys";
 }
-#content #title-bar #window-button {
+.content #title-bar #window-button {
   width: 60px;
   height: 20px;
   position: absolute;
   right: 0;
   top: 0;
+}
+
+.content#home:nth-child(1) #frame {
+  border-color: hsl(170, 32%, 75%);
+  background-color: hsl(170, 56%, 84%);
+}
+.content#home:nth-child(1) #title-bar {
+  border-color: hsl(170, 32%, 75%);
+  background-color: hsl(170, 72%, 91%);
+}
+.content#home:nth-child(1) .project .desc {
+  background-color: hsl(170, 85%, 95%);
+}
+
+.content#blog > #frame:nth-child(1) {
+  border-color: hsl(40, 32%, 75%);
+  background-color: hsl(40, 56%, 84%);
+}
+.content#blog > #frame:nth-child(1) .markdown-body {
+  background-color: hsl(40, 85%, 95%);
+}
+.content#blog #title-bar:nth-child(1) {
+  border-color: hsl(40, 32%, 75%);
+  background-color: hsl(40, 72%, 91%);
+}
+
+.content#home:nth-child(2) #frame {
+  border-color: hsl(190, 32%, 75%);
+  background-color: hsl(190, 56%, 84%);
+}
+.content#home:nth-child(2) #title-bar {
+  border-color: hsl(190, 32%, 75%);
+  background-color: hsl(190, 72%, 91%);
+}
+.content#home:nth-child(2) .project .desc {
+  background-color: hsl(190, 85%, 95%);
+}
+
+.content#blog > #frame:nth-child(2) {
+  border-color: hsl(60, 32%, 75%);
+  background-color: hsl(60, 56%, 84%);
+}
+.content#blog > #frame:nth-child(2) .markdown-body {
+  background-color: hsl(60, 85%, 95%);
+}
+.content#blog #title-bar:nth-child(2) {
+  border-color: hsl(60, 32%, 75%);
+  background-color: hsl(60, 72%, 91%);
+}
+
+.content#home:nth-child(3) #frame {
+  border-color: hsl(210, 32%, 75%);
+  background-color: hsl(210, 56%, 84%);
+}
+.content#home:nth-child(3) #title-bar {
+  border-color: hsl(210, 32%, 75%);
+  background-color: hsl(210, 72%, 91%);
+}
+.content#home:nth-child(3) .project .desc {
+  background-color: hsl(210, 85%, 95%);
+}
+
+.content#blog > #frame:nth-child(3) {
+  border-color: hsl(80, 32%, 75%);
+  background-color: hsl(80, 56%, 84%);
+}
+.content#blog > #frame:nth-child(3) .markdown-body {
+  background-color: hsl(80, 85%, 95%);
+}
+.content#blog #title-bar:nth-child(3) {
+  border-color: hsl(80, 32%, 75%);
+  background-color: hsl(80, 72%, 91%);
+}
+
+.content#home:nth-child(4) #frame {
+  border-color: hsl(230, 32%, 75%);
+  background-color: hsl(230, 56%, 84%);
+}
+.content#home:nth-child(4) #title-bar {
+  border-color: hsl(230, 32%, 75%);
+  background-color: hsl(230, 72%, 91%);
+}
+.content#home:nth-child(4) .project .desc {
+  background-color: hsl(230, 85%, 95%);
+}
+
+.content#blog > #frame:nth-child(4) {
+  border-color: hsl(100, 32%, 75%);
+  background-color: hsl(100, 56%, 84%);
+}
+.content#blog > #frame:nth-child(4) .markdown-body {
+  background-color: hsl(100, 85%, 95%);
+}
+.content#blog #title-bar:nth-child(4) {
+  border-color: hsl(100, 32%, 75%);
+  background-color: hsl(100, 72%, 91%);
+}
+
+.content#home:nth-child(5) #frame {
+  border-color: hsl(250, 32%, 75%);
+  background-color: hsl(250, 56%, 84%);
+}
+.content#home:nth-child(5) #title-bar {
+  border-color: hsl(250, 32%, 75%);
+  background-color: hsl(250, 72%, 91%);
+}
+.content#home:nth-child(5) .project .desc {
+  background-color: hsl(250, 85%, 95%);
+}
+
+.content#blog > #frame:nth-child(5) {
+  border-color: hsl(120, 32%, 75%);
+  background-color: hsl(120, 56%, 84%);
+}
+.content#blog > #frame:nth-child(5) .markdown-body {
+  background-color: hsl(120, 85%, 95%);
+}
+.content#blog #title-bar:nth-child(5) {
+  border-color: hsl(120, 32%, 75%);
+  background-color: hsl(120, 72%, 91%);
+}
+
+.content#home:nth-child(6) #frame {
+  border-color: hsl(270, 32%, 75%);
+  background-color: hsl(270, 56%, 84%);
+}
+.content#home:nth-child(6) #title-bar {
+  border-color: hsl(270, 32%, 75%);
+  background-color: hsl(270, 72%, 91%);
+}
+.content#home:nth-child(6) .project .desc {
+  background-color: hsl(270, 85%, 95%);
+}
+
+.content#blog > #frame:nth-child(6) {
+  border-color: hsl(140, 32%, 75%);
+  background-color: hsl(140, 56%, 84%);
+}
+.content#blog > #frame:nth-child(6) .markdown-body {
+  background-color: hsl(140, 85%, 95%);
+}
+.content#blog #title-bar:nth-child(6) {
+  border-color: hsl(140, 32%, 75%);
+  background-color: hsl(140, 72%, 91%);
+}
+
+.content#home:nth-child(7) #frame {
+  border-color: hsl(290, 32%, 75%);
+  background-color: hsl(290, 56%, 84%);
+}
+.content#home:nth-child(7) #title-bar {
+  border-color: hsl(290, 32%, 75%);
+  background-color: hsl(290, 72%, 91%);
+}
+.content#home:nth-child(7) .project .desc {
+  background-color: hsl(290, 85%, 95%);
+}
+
+.content#blog > #frame:nth-child(7) {
+  border-color: hsl(160, 32%, 75%);
+  background-color: hsl(160, 56%, 84%);
+}
+.content#blog > #frame:nth-child(7) .markdown-body {
+  background-color: hsl(160, 85%, 95%);
+}
+.content#blog #title-bar:nth-child(7) {
+  border-color: hsl(160, 32%, 75%);
+  background-color: hsl(160, 72%, 91%);
 }
 
 #tabs {
@@ -125,57 +325,6 @@ body {
 
 #tab:nth-child(3):hover {
   background-color: var(--gb-fg0);
-}
-
-#preview-wrapper {
-  margin-left: 5px;
-  margin-right: 5px;
-  width: 100%;
-  align-items: center;
-  display: flex;
-}
-#preview-wrapper #preview {
-  flex: auto;
-  text-decoration: none;
-  display: inline-block;
-  position: relative;
-  margin: 7.5px;
-  width: calc(50% - 80px);
-  height: 100%;
-  padding: 21px 16px 16px 16px;
-  border-radius: 10px;
-  border: 5px solid var(--gb-f-green);
-  background-color: var(--gb-b-green);
-  text-align: left;
-  transition: 0.3s;
-}
-#preview-wrapper #preview:hover {
-  transform: scale(1.02) translateY(-5px);
-}
-#preview-wrapper #preview #t {
-  position: absolute;
-  width: 100%;
-  padding-left: 5px;
-  transform: translateY(-21px) translateX(-16px);
-  color: var(--gb-f-green);
-  font-style: italic;
-  font-size: small;
-  border-bottom: 5px double var(--gb-f-green);
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-#preview-wrapper #preview #h {
-  color: var(--gb-bg1);
-  display: static;
-  font-size: x-large;
-  margin: 0;
-}
-#preview-wrapper #preview #p {
-  margin-left: 16px;
-  color: var(--gb-bg1);
-  display: static;
-  font-size: medium;
 }
 
 #article {
