--- a/web/template/project.html
+++ b/web/template/project.html
@@ -2,7 +2,7 @@
 <div id="title-bar">
     <img id="window-button" src="assets/window.svg" />
     <i>
-        Viewing media/article/{{NAME}}.md
+        Viewing media/project_desc/{{NAME}}.md
     </i>
 </div>
 <div class="project">
