--- a/web/template/header.html
+++ b/web/template/header.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/styles/styles.css">
     <link rel="stylesheet" href="/styles/project.css">
     <script defer src="/index.js"></script>
-    <link rel="preload" href="assets/lcd_dot_matrix.svg" as="image">
+    <link rel="preconnect" href="assets/lcd_dot_matrix.svg" as="image">
+    {{PRECONNECT}}
 </head>
 
 <body>
