--- a/web/template/home.html
+++ b/web/template/home.html
@@ -1,3 +1,19 @@
 <div class="content" id="home">
-    {{CONTENT}}
+    <div id="frame"></div>
+<div id="title-bar">
+    <img id="window-button" src="assets/window.svg" />
+    <i>
+        Viewing media/project_desc/isospin.md
+    </i>
+</div>
+<div class="project">
+    <img class="icon" src="projects/isospin.png">
+    <div class="desc">
+        <div class="markdown-body"><h1>Isospin</h1>
+<!-- [![wakatime](https://wakatime.com/badge/user/4b6581a3-5d2c-4e5d-9be1-63e7bb07270d/project/7867fba2-41b6-4e7c-9f9b-c37d18db6a65.svg)](https://wakatime.com/badge/user/4b6581a3-5d2c-4e5d-9be1-63e7bb07270d/project/7867fba2-41b6-4e7c-9f9b-c37d18db6a65) -->
+<p>Hello, yes this is in fact the website you are looking at currently. This took forever to make so yes it <em>does</em> deserve a spot on the projects page.</p>
+<p>Pretty self explanatory.</p>
+</div>
+    </div>
+</div>
 </div>
