cleanup & rollback html files

--- a/web/template/blog.html
+++ b/web/template/blog.html
@@ -8,16 +8,6 @@
                     style="color:var(--gb-yellow)">template</span><span style="color:var(--gb-green)">/</span><span
                     style="color:var(--gb-yellow)">blog</span><span style="color:var(--gb-red)">.html</span></i>
         </div>
-        <div id="preview-wrapper">
-<a id="preview" href="/article/test"><div id="t">
-    [Mon Feb 13 16:26:36 2023] Viewing ./media/article/test.md
-    </div><div id="h">Test</div>
-    <div id="p">This is to test if the blog thingy works.</div>
-</a>
-<a id="preview" href="/article/test2"><div id="t">
-    [Mon Feb 13 16:26:36 2023] Viewing ./media/article/test2.md
-    </div><div id="h">Test2</div>
-    <div id="p">This is to test if the blog thingy works. (2 electric boogaloo).</div>
-</a></div>
+        {{CONTENT}}
     </div>
 </div>
