--- a/web/scss/styles.scss
+++ b/web/scss/styles.scss
@@ -158,7 +158,7 @@ $navbar-height: calc(1.2em);
 #tabs {
     z-index: 9001;
 
-    position: fixed;
+    position: absolute;
     font-size: 4vh;
 
     height: $navbar-height;
