--- a/web/template/header.html
+++ b/web/template/header.html
@@ -14,10 +14,10 @@
 <body>
     <div id="grid"></div>
     <div id="tabs">
-        <a id="tab" href="/home">home</a>
-        <a id="tab" href="/blog">blog</a>
+        <!-- <a id="tab" href="/home">home</a>
+        <a id="tab" href="/blog">blog</a> -->
         <a id="tab" target="_blank" rel="noopener noreferrer" href="https://github.com/aspiringLich/isospin"><img
-                src="assets/github.png"></a>
+                src="assets/github.png"></a> 
     </div>
     <div id="header">
         <div>
@@ -33,5 +33,5 @@
         <img id="flop" src="assets/big-floppa.gif">
     </div>
     {{CONTENT}}
+    <div style="height: 100vh"></div>
 </body>
-<div style="height: 20vh"></div>
