--- a/web/scss/project.scss
+++ b/web/scss/project.scss
@@ -5,20 +5,6 @@ $item-size: calc($content-width * 0.25);
 .project {
     $desc-size: 2.8;
 
-    // .flex {
-    //     justify-content: left;
-    //     display: flex;
-
-    //     #h {
-    //         font-size: calc($text-size * 1);
-    //         margin-top: 0;
-    //         margin-left: 5px;
-    //         width: 100%;
-    //         position: relative;
-    //         // background-color: var(--gb-f-blue);
-    //     }
-    // }
-
     .project {
         display: flex;
         flex-direction: row;
@@ -44,6 +30,8 @@ $item-size: calc($content-width * 0.25);
 }
 
 .desc {
+    color: #404040;
+    
     padding-left: 15px;
     margin-top: 5px;
     text-align: left;
