--- a/web/template/header.html
+++ b/web/template/header.html
@@ -17,7 +17,7 @@
         <!-- <a id="tab" href="/home">home</a>
         <a id="tab" href="/blog">blog</a> -->
         <a id="tab" target="_blank" rel="noopener noreferrer" href="https://github.com/aspiringLich/isospin"><img
-                src="assets/github.png"></a> 
+                src="assets/github-mark.svg"></a> 
     </div>
     <div id="header">
         <div>
@@ -30,8 +30,8 @@
                 <h1 class="center">&ltISOSPIN&gt</h1>
             </div>
         </div>
-        <img id="flop" src="assets/big-floppa.gif">
     </div>
+    <img id="flop" src="assets/big-floppa.gif">
     {{CONTENT}}
     <div style="height: 100vh"></div>
 </body>
