--- a/web/scss/config.scss
+++ b/web/scss/config.scss
@@ -5,3 +5,17 @@
     --color-grid-1: rgba(0, 0, 0, 0.02);
     --color-grid-2: rgba(0, 0, 0, 0.04);
 }
+
+$parallax-amt: 10vw;
+
+@keyframes parallax {
+    to {
+        transform: translateY($parallax-amt);
+    }
+}
+
+@keyframes parallax-rev {
+    to {
+        transform: translateY(-$parallax-amt)
+    }
+}
