--- a/web/scss/styles.scss
+++ b/web/scss/styles.scss
@@ -21,9 +21,15 @@ body {
 #grid {
     position: fixed;
     left: 0;
+    // top: 50%;
     width: 100%;
-    height: 200%;
+    height: 100%;
     background-color: var(--color-bg);
+    
+    // animation: parallax-rev 1s linear infinite;
+    // animation-play-state: paused;
+    // animation-delay: calc(var(--scroll) * -1s);
+    
     background-image: linear-gradient(
             0deg,
             transparent 9%,
@@ -72,7 +78,6 @@ body {
             transparent 92%,
             transparent
         );
-    height: 100%;
     background-size: 50px 50px;
 }
 
