loading finished ish start os

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,9 @@
 body {
 	@apply m-0 overflow-clip;
 }
+
+@font-face {
+	font-family: "VeraMono";
+	src: url("$assets/fonts/VeraMono-Bold.woff2") format("woff2")
+		url("$assets/fonts/VeraMono-Bold.ttf") format("ttf");
+}
