--- a/src/styles.css
+++ b/src/styles.css
@@ -5,8 +5,8 @@
 @layer base {
 	:root {
 		--color-bg: 17 17 17;
-		--color-grid-1: 255 255 255 / .1;
-		--color-grid-2: 255 255 255 / .12;
+		--color-grid-1: 255 255 255 / 0.1;
+		--color-grid-2: 255 255 255 / 0.12;
 	}
 }
 
@@ -16,6 +16,6 @@ body {
 
 @font-face {
 	font-family: "VeraMono";
-	src: url("$assets/fonts/VeraMono-Bold.woff2") format("woff2")
-		url("$assets/fonts/VeraMono-Bold.ttf") format("ttf");
+	src: url("/static/fonts/VeraMono-Bold.woff2") format("woff2")
+		url("/static/fonts/VeraMono-Bold.ttf") format("ttf");
 }
